Done with all the tests and all are tested and write all the comments

--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -10,7 +10,7 @@
             <h3>User Calendra Booking</h3>
         </div>
         <div class="card-body">
-            <form action="/user/createBooking" method="POST">
+            <form action="/booking/createBooking" method="POST">
             <input type="text" name="user1" placeholder="Enter First user" required id="name">
             <input type="text" name="user2" placeholder="Enter second user" required id="name">
             <input type="text" name="purpose" placeholder="Booking Purpose" required class="username1">
