--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -7,6 +7,6 @@
         <div id="head2">
             <a href="/">Home</a>
             <a href="/user/userKyc">User Kyc</a>
-            <a href="/user/booking">User Booking</a>
+            <a href="/booking/booking">User Booking</a>
         </div>
 </header>
